[package]
name = "solana-account-view"
description = "Lightweight representation for a runtime Account"
documentation = "https://docs.rs/solana-account-view"
version = "0.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
solana-address = { workspace = true }
solana-program-error = { version = "2.2.1", git = "https://github.com/kevinheavey/solana-sdk.git", branch = "program-error-pinocchio-compat" }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }
