[package]
name = "solana-account-view"
description = "A lightweight representation of a runtime account"
documentation = "https://docs.rs/solana-account-view"
version = "0.0.0"
rust-version = "1.81.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-address = { workspace = true }
solana-program-error = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }

[dev-dependencies]
solana-program-entrypoint = { workspace = true }

[lints]
workspace = true
