[package]
name = "solana-address"
description = "Solana account addresses"
documentation = "https://docs.rs/solana-address"
version = "0.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[features]
syscalls = ["dep:solana-define-syscall", "dep:solana-program-error"]

[dependencies]
solana-define-syscall = { workspace = true, optional = true }
solana-program-error = { workspace = true, optional = true }
