[package]
name = "solana-address"
description = "Solana account addresses"
documentation = "https://docs.rs/solana-address"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[features]
borsh = ["dep:borsh", "std"]
bytemuck = ["dep:bytemuck", "dep:bytemuck_derive"]
curve25519 = ["dep:curve25519-dalek", "sha2"]
decode = ["dep:five8_const", "error"]
dev-context-only-utils = ["dep:arbitrary", "rand"]
error = ["dep:num-traits", "dep:solana-program-error"]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro", "dep:solana-program-error", "std"]
rand = ["dep:rand", "dep:solana-atomic-u64"]
sanitize = ["dep:solana-sanitize"]
serde = ["dep:serde", "dep:serde_derive"]
sha2 = ["dep:solana-sha256-hasher", "solana-sha256-hasher/sha2"]
std = ["dep:five8", "dep:num-traits", "serde"]
syscalls = ["dep:solana-define-syscall", "dep:solana-program-error"]

[dependencies]
arbitrary = { workspace = true, features = ["derive"], optional = true }
borsh = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
bytemuck_derive = { workspace = true, optional = true }
five8 = { workspace = true, optional = true }
five8_const = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-atomic-u64 = { workspace = true, optional = true }
solana-define-syscall = { workspace = true, optional = true }
solana-frozen-abi = { workspace = true, features = ["frozen-abi"], optional = true }
solana-frozen-abi-macro = { workspace = true, features = ["frozen-abi"], optional = true }
solana-program-error = { workspace = true, optional = true }
solana-sanitize = { workspace = true, optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
curve25519-dalek = { workspace = true, optional = true }
solana-sha256-hasher = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
solana-account-info = { path = "../account-info" }
solana-cpi = { path = "../cpi" }
solana-example-mocks = { path = "../example-mocks" }
solana-hash = { workspace = true }
solana-instruction = { path = "../instruction", features = ["borsh"] }
solana-program-error = { workspace = true, features = ["borsh"] }
solana-system-interface = { workspace = true, features = ["bincode"] }
strum = { workspace = true }
strum_macros = { workspace = true }