[package]
name = "solana-nonce"
description = "Solana durable transaction nonces."
documentation = "https://docs.rs/solana-nonce"
version = "3.2.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
dev-context-only-utils = ["serde"]
serde = [
    "dep:serde",
    "dep:serde_derive",
    "serde/alloc",
    "solana-fee-calculator/serde",
    "solana-hash/serde",
    "solana-pubkey/serde",
]
wincode = [
    "dep:wincode",
    "solana-fee-calculator/wincode",
    "solana-hash/wincode",
    "solana-pubkey/wincode",
]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-fee-calculator/frozen-abi",
    "solana-hash/frozen-abi",
    "solana-pubkey/frozen-abi",
]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-fee-calculator = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = ["frozen-abi"] }
solana-hash = { workspace = true, features = ["copy", "decode"] }
solana-pubkey = { workspace = true, default-features = false }
solana-sha256-hasher = { workspace = true }
wincode = { workspace = true, optional = true, features = ["alloc"] }

[dev-dependencies]
bincode = { workspace = true }
solana-nonce = { path = ".", features = ["dev-context-only-utils", "wincode"] }
solana-pubkey = { workspace = true, features = ["std"], default-features = false }
solana-sha256-hasher = { workspace = true, features = ["sha2"] }

[lints]
workspace = true
